Replace rao elementary action by core action (#920)